--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ theme: hugo-goa
 
 disableKinds: [RSS, taxonomy, taxonomyTerm]
 languageCode: en-us
-googleAnalytics: UA-8100748-1
+#googleAnalytics: UA-8100748-1
 
 taxonomies:
   category: categories
@@ -12,10 +12,10 @@ taxonomies:
 
 params:
   author: Grahame Murray
-  favicon: ../favicon.ico
-  bgImg: ../headshot-square.jpg
-  authorimage: ../headshot-square.jpg
-  copyright: "&copy; 2024 All rights reserved."
+  favicon: favicon.ico
+  bgImg: headshot2.jpg
+  authorimage: headshot2.jpg
+  copyright: "&copy; 2025 All rights reserved."
   fadeIn: false
   fadeInIndex: false
 
@@ -35,15 +35,17 @@ params:
 
     Agnostic father
 
+    Distinguished engineer
+
     Cat owning dog lover
 
-    Vegetarian traveler
+    Pescatarian traveler
 
     Anglophile liberal
 
     Musical motorcyclist
 
-    Sarcastic beer brewer
+    Sarcastic brewer
 
     Francophone roboticist
 
@@ -64,7 +66,7 @@ params:
   visual:
     image:
       enable: true
-      file: ../headshot-square.jpg
+      file: headshot-square.jpg
       position: center center
 
   # twitter: grahame
@@ -75,15 +77,17 @@ params:
 
   social:
     github: gusnuf
-    twitter: gusnuf
-    facebook: gusnuf
+    #twitter: gusnuf
+    #facebook: gusnuf
     linkedin: grahamemurray
     soundcloud: gusnuf
+    bsky: grahame.com
+    substack: grahamemurray
     email: jobs@grahame.com
 
   extra:
-    copyright: "&copy; 2024 All rights reserved."
-    poweredby: true
+    copyright: "&copy; 2025 All rights reserved."
+    poweredby: false
     highlightjs: true
     socialmarkup: false
     toc: false
