fix: added DevEx keyword

--- a/data/resume.yaml
+++ b/data/resume.yaml
@@ -18,7 +18,7 @@ basics:
 xHighlights:
   - Extensive software development, design, and operations experience
   - Highly curious generalist
-  - Focus on platform engineering and developer experience
+  - Focus on platform engineering and developer experience (DevEx)
   - Depth in language, educational, and community projects
 
 # Custom extension: online metadata for resume distribution
