feat: modernized print versions of resume fix: carousels scroll up and entering and exiting words scroll too fix: web resume bullet update

--- a/data/descriptions.yaml
+++ b/data/descriptions.yaml
@@ -17,7 +17,7 @@ pairs:
     noun: traveler
 
   - adjective: Anglophile
-    noun: liberal
+    noun: progressive
 
   - adjective: Musical
     noun: motorcyclist
